--- a/fxml/digital_trainer_board.fxml
+++ b/fxml/digital_trainer_board.fxml
@@ -1,7 +1,16 @@
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import vbb.digital_trainer.controllers.BreadboardController?>
+<?import vbb.digital_trainer.controls.BreadboardControl?>
 <HBox xmlns:fx="http://javafx.com/javafx"
+      fx:id="digitalTrainer"
+      fx:controller="vbb.digital_trainer.controllers.DigitalTrainerController"
       prefWidth="540" prefHeight="730"
       minWidth="540" minHeight="730"
       maxWidth="540" maxHeight="730">
-
+    <BreadboardControl row="64"/>
+    <VBox>
+        <fx:include source="input_connectors_area.fxml"/>
+        <fx:include source="output_connectors_area.fxml"/>
+    </VBox>
 </HBox>
