--- a/fxml/custom_control/power_switch.fxml
+++ b/fxml/custom_control/power_switch.fxml
@@ -1,6 +1,6 @@
 <?import javafx.scene.shape.Rectangle?>
 <fx:root type="javafx.scene.layout.StackPane" xmlns:fx="http://javafx.com/javafx" alignment="CENTER_RIGHT">
-    <Rectangle fx:id="box" width="22" height="10" onMouseClicked="#toggleSwitch"/>
-    <Rectangle fx:id="toggle" width="10" height="9" fill="white" stroke="black" strokeWidth="1" styleClass="toggle"
+    <Rectangle fx:id="box" width="39" height="18" onMouseClicked="#toggleSwitch" styleClass="switch_toggle_box"/>
+    <Rectangle fx:id="toggle" width="18" height="18" styleClass="switch_toggle"
                mouseTransparent="true"/>
 </fx:root>
