--- a/fxml/digital_trainer_board.fxml
+++ b/fxml/digital_trainer_board.fxml
@@ -1,13 +1,51 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import vbb.digital_trainer.controls.BreadboardControl?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+
+<?import javafx.geometry.Insets?>
 <HBox xmlns:fx="http://javafx.com/javafx"
       prefWidth="540" prefHeight="730"
       minWidth="540" minHeight="730"
-      maxWidth="540" maxHeight="730">
-    <BreadboardControl row="64"/>
-    <VBox>
+      maxWidth="540" maxHeight="730"
+      spacing="26"
+      id="digital_trainer_board"
+      stylesheets="/vbb/css/digital_trainer_style.css">
+    <AnchorPane>
+        <ImageView AnchorPane.topAnchor="7" AnchorPane.leftAnchor="7">
+            <image>
+                <Image url="/vbb/images/screw.png"/>
+            </image>
+        </ImageView>
+        <ImageView AnchorPane.bottomAnchor="7" AnchorPane.leftAnchor="7">
+            <image>
+                <Image url="/vbb/images/screw.png"/>
+            </image>
+        </ImageView>
+    </AnchorPane>
+    <VBox alignment="CENTER" styleClass="area">
+        <padding>
+            <Insets top="5" right="5" bottom="5" left="5"/>
+        </padding>
+        <BreadboardControl/>
+    </VBox>
+    <VBox alignment="CENTER" spacing="19">
+        <fx:include source="power_supply.fxml"/>
         <fx:include source="input_connectors_area.fxml"/>
         <fx:include source="output_connectors_area.fxml"/>
     </VBox>
+    <AnchorPane>
+        <ImageView AnchorPane.topAnchor="7" AnchorPane.rightAnchor="7">
+            <image>
+                <Image url="/vbb/images/screw.png"/>
+            </image>
+        </ImageView>
+        <ImageView AnchorPane.bottomAnchor="7" AnchorPane.rightAnchor="7">
+            <image>
+                <Image url="/vbb/images/screw.png"/>
+            </image>
+        </ImageView>
+    </AnchorPane>
 </HBox>
