UI design done and switch animation added

--- a/css/digital_trainer_style.css
+++ b/css/digital_trainer_style.css
@@ -1,5 +1,6 @@
 #digital_trainer_board {
     -fx-background-color: #facd8a;
+    -fx-alignment: center;
 }
 
 .area {
@@ -13,6 +14,10 @@
 
 .breadboard_divider {
     -fx-fill: #c1c1c1;
+}
+
+#breadboard_area {
+    -fx-max-height: 670px;
 }
 
 .connector_outer_circle {
