--- a/fxml/tools.fxml
+++ b/fxml/tools.fxml
@@ -3,18 +3,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.image.Image?>
-<?import java.net.URL?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.StackPane?>
 
-<VBox id="tools_area"
-      xmlns:fx="http://javafx.com/fxml"
+<VBox xmlns:fx="http://javafx.com/fxml"
+      fx:controller="vbb.tools.ToolsController"
       snapToPixel="true"
       prefWidth="120" prefHeight="730"
       minWidth="120"
-      styleClass="vbox">
+      id="tools_area" stylesheets="/vbb/css/tools_style.css">
 
     <ImageView id="tools_topBar">
         <image>
@@ -22,124 +22,132 @@
         </image>
     </ImageView>
 
+    <Button fx:id="selectTool" styleClass="tool"
+            prefHeight="35" minHeight="35" maxHeight="35"
+            prefWidth="45" minWidth="45" maxWidth="45"
+            onAction="#handleToolSelection">
+        <graphic>
+            <ImageView>
+                <image>
+                    <Image url="@/vbb/images/tools/select.png"/>
+                </image>
+            </ImageView>
+        </graphic>
+    </Button>
+
+    <Rectangle width="90" height="1" styleClass="divider"/>
+
     <GridPane snapToPixel="true"
               hgap="10" vgap="2"
               alignment="CENTER">
 
-        <VBox GridPane.rowIndex="0" GridPane.columnIndex="0">
-            <Label text="AND" />
-            <Label text="7408" />
+        <VBox GridPane.rowIndex="0" GridPane.columnIndex="0" styleClass="chip_label">
+            <Label text="AND" styleClass="gate_label"/>
+            <Label text="7408" styleClass="ic_number_label"/>
         </VBox>
-        <Button styleClass="chip"
-                prefHeight="69" minHeight="69" maxHeight="69"
-                prefWidth="49" minWidth="49" maxWidth="49"
+        <Button fx:id="andChipTool" styleClass="chip"
+                onAction="#handleToolSelection"
                 GridPane.rowIndex="0" GridPane.columnIndex="1">
             <graphic>
                 <ImageView>
                     <image>
-                        <Image url="@/vbb/images/chip.png"/>
+                        <Image url="@/vbb/images/tools/chips/and.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
 
-        <VBox GridPane.rowIndex="1" GridPane.columnIndex="0">
-            <Label text="AND" />
-            <Label text="7408" />
+        <VBox GridPane.rowIndex="1" GridPane.columnIndex="0" styleClass="chip_label">
+            <Label text="OR" styleClass="gate_label"/>
+            <Label text="7432" styleClass="ic_number_label"/>
         </VBox>
-        <Button styleClass="chip"
-                prefHeight="69" minHeight="69" maxHeight="69"
-                prefWidth="49" minWidth="49" maxWidth="49"
+        <Button fx:id="orChipTool" styleClass="chip"
+                onAction="#handleToolSelection"
                 GridPane.rowIndex="1" GridPane.columnIndex="1">
             <graphic>
                 <ImageView>
                     <image>
-                        <Image url="@/vbb/images/chip.png"/>
+                        <Image url="@/vbb/images/tools/chips/or.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
 
-        <VBox GridPane.rowIndex="2" GridPane.columnIndex="0">
-            <Label text="AND" />
-            <Label text="7408" />
+        <VBox GridPane.rowIndex="2" GridPane.columnIndex="0" styleClass="chip_label">
+            <Label text="NOT" styleClass="gate_label"/>
+            <Label text="7404" styleClass="ic_number_label"/>
         </VBox>
-        <Button styleClass="chip"
-                prefHeight="69" minHeight="69" maxHeight="69"
-                prefWidth="49" minWidth="49" maxWidth="49"
+        <Button fx:id="notChipTool" styleClass="chip"
+                onAction="#handleToolSelection"
                 GridPane.rowIndex="2" GridPane.columnIndex="1">
             <graphic>
                 <ImageView>
                     <image>
-                        <Image url="@/vbb/images/chip.png"/>
+                        <Image url="@/vbb/images/tools/chips/not.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
 
-        <VBox GridPane.rowIndex="3" GridPane.columnIndex="0">
-            <Label text="AND" />
-            <Label text="7408" />
+        <VBox GridPane.rowIndex="3" GridPane.columnIndex="0" styleClass="chip_label">
+            <Label text="NAND" styleClass="gate_label"/>
+            <Label text="7400" styleClass="ic_number_label"/>
         </VBox>
-        <Button styleClass="chip"
-                prefHeight="69" minHeight="69" maxHeight="69"
-                prefWidth="49" minWidth="49" maxWidth="49"
+        <Button fx:id="nandChipTool" styleClass="chip"
+                onAction="#handleToolSelection"
                 GridPane.rowIndex="3" GridPane.columnIndex="1">
             <graphic>
                 <ImageView>
                     <image>
-                        <Image url="@/vbb/images/chip.png"/>
+                        <Image url="@/vbb/images/tools/chips/nand.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
 
-        <VBox GridPane.rowIndex="4" GridPane.columnIndex="0">
-            <Label text="AND" />
-            <Label text="7408" />
+        <VBox GridPane.rowIndex="4" GridPane.columnIndex="0" styleClass="chip_label">
+            <Label text="NOR" styleClass="gate_label"/>
+            <Label text="7402" styleClass="ic_number_label"/>
         </VBox>
-        <Button styleClass="chip"
-                prefHeight="69" minHeight="69" maxHeight="69"
-                prefWidth="49" minWidth="49" maxWidth="49"
+        <Button fx:id="norChipTool" styleClass="chip"
+                onAction="#handleToolSelection"
                 GridPane.rowIndex="4" GridPane.columnIndex="1">
             <graphic>
                 <ImageView>
                     <image>
-                        <Image url="@/vbb/images/chip.png"/>
+                        <Image url="@/vbb/images/tools/chips/nor.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
 
-        <VBox GridPane.rowIndex="5" GridPane.columnIndex="0">
-            <Label text="AND" />
-            <Label text="7408" />
+        <VBox GridPane.rowIndex="5" GridPane.columnIndex="0" styleClass="chip_label">
+            <Label text="XOR" styleClass="gate_label"/>
+            <Label text="7486" styleClass="ic_number_label"/>
         </VBox>
-        <Button styleClass="chip"
-                prefHeight="69" minHeight="69" maxHeight="69"
-                prefWidth="49" minWidth="49" maxWidth="49"
+        <Button fx:id="xorChipTool" styleClass="chip"
+                onAction="#handleToolSelection"
                 GridPane.rowIndex="5" GridPane.columnIndex="1">
             <graphic>
                 <ImageView>
                     <image>
-                        <Image url="@/vbb/images/chip.png"/>
+                        <Image url="@/vbb/images/tools/chips/xor.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
 
-        <VBox GridPane.rowIndex="6" GridPane.columnIndex="0">
-            <Label text="AND" />
-            <Label text="7408" />
+        <VBox GridPane.rowIndex="6" GridPane.columnIndex="0" styleClass="chip_label">
+            <Label text="XNOR" styleClass="gate_label"/>
+            <Label text="747266" styleClass="ic_number_label"/>
         </VBox>
-        <Button styleClass="chip"
-                prefHeight="69" minHeight="69" maxHeight="69"
-                prefWidth="49" minWidth="49" maxWidth="49"
+        <Button fx:id="xnorChipTool" styleClass="chip"
+                onAction="#handleToolSelection"
                 GridPane.rowIndex="6" GridPane.columnIndex="1">
             <graphic>
                 <ImageView>
                     <image>
-                        <Image url="@/vbb/images/chip.png"/>
+                        <Image url="@/vbb/images/tools/chips/xnor.png"/>
                     </image>
                 </ImageView>
             </graphic>
@@ -149,47 +157,70 @@
 
     <Rectangle width="90" height="1" styleClass="divider"/>
 
-    <Button styleClass="tool"
-            prefHeight="35" minHeight="35" maxHeight="35"
-            prefWidth="45" minWidth="45" maxWidth="45">
-        <graphic>
-            <ImageView>
-                <image>
-                    <Image url="@/vbb/images/wire.png"/>
-                </image>
-            </ImageView>
-        </graphic>
-    </Button>
+    <VBox alignment="CENTER" spacing="5">
+        <Button fx:id="wireTool" styleClass="tool"
+                onAction="#handleToolSelection"
+                prefHeight="35" minHeight="35" maxHeight="35"
+                prefWidth="45" minWidth="45" maxWidth="45">
+            <graphic>
+                <ImageView>
+                    <image>
+                        <Image url="@/vbb/images/tools/wire.png"/>
+                    </image>
+                </ImageView>
+            </graphic>
+        </Button>
 
-    <GridPane hgap="3" vgap="3" alignment="CENTER" fx:id="a">
-        <Rectangle width="25" height="25" fill="#ff0000"
-                   GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-        <Rectangle width="25" height="25" fill="#00ffff"
-                   GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-        <Rectangle width="25" height="25" fill="#006a25"
-                   GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-        <Rectangle width="25" height="25" fill="#e8641b"
-                   GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-        <Rectangle width="25" height="25" fill="#ffff00"
-                   GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-        <Rectangle width="25" height="25" fill="#0000ff"
-                   GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-        <Rectangle width="25" height="25" fill="#e10052"
-                   GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-        <Rectangle width="25" height="25" fill="#5b3715"
-                   GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-        <Rectangle width="25" height="25" fill="#00ff00"
-                   GridPane.rowIndex="0" GridPane.columnIndex="2"/>
-        <Rectangle width="25" height="25" fill="#ff00ff"
-                   GridPane.rowIndex="1" GridPane.columnIndex="2"/>
-        <Rectangle width="25" height="25" fill="#00a49d"
-                   GridPane.rowIndex="2" GridPane.columnIndex="2"/>
-        <Rectangle width="25" height="25" fill="#67087b"
-                   GridPane.rowIndex="3" GridPane.columnIndex="2"/>
-    </GridPane>
-
-    <stylesheets>
-        <URL value="@/vbb/css/tools_style.css"/>
-    </stylesheets>
+        <GridPane alignment="CENTER" id="color_picker">
+            <StackPane alignment="CENTER" GridPane.rowIndex="0" GridPane.columnIndex="0">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color1"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="0">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color2"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="2" GridPane.columnIndex="0">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color3"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="3" GridPane.columnIndex="0">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color4"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="0" GridPane.columnIndex="1">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color5"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="1">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color6"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="2" GridPane.columnIndex="1">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color7"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="3" GridPane.columnIndex="1">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color8"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="0" GridPane.columnIndex="2">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color9"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="1" GridPane.columnIndex="2">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color10"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="2" GridPane.columnIndex="2">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color11"/>
+            </StackPane>
+            <StackPane alignment="CENTER" GridPane.rowIndex="3" GridPane.columnIndex="2">
+                <Rectangle width="29" height="29" styleClass="color"/>
+                <Rectangle width="25" height="25" mouseTransparent="true" id="color12"/>
+            </StackPane>
+        </GridPane>
+    </VBox>
 
 </VBox>
