--- a/fxml/input_connectors_area.fxml
+++ b/fxml/input_connectors_area.fxml
@@ -1,12 +1,11 @@
 <?import vbb.digital_trainer.controls.ConnectorControl?>
-<?import vbb.digital_trainer.controls.SwitchControl?>
+<?import vbb.digital_trainer.controls.switch_control.DataSwitchControl?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.geometry.Insets?>
 
-<?import vbb.digital_trainer.controls.DataSwitchControl?>
 <HBox xmlns:fx="http://javafx.com/javafx" spacing="19"
-      styleClass="area">
+      styleClass="area" stylesheets="/vbb/css/digital_trainer_style.css">
 
     <padding>
         <Insets top="10" right="14" bottom="10" left="45"/>
@@ -41,21 +40,3 @@
     </VBox>
 
 </HBox>
-<!--<GridPane xmlns:fx="http://javafx.com/javafx" hgap="34" vgap="23">
-    <ConnectorControl GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-    <ConnectorControl GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="1" GridPane.columnIndex="1"/>
-    <ConnectorControl GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="2" GridPane.columnIndex="1"/>
-    <ConnectorControl GridPane.rowIndex="3" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="3" GridPane.columnIndex="1"/>
-    <ConnectorControl GridPane.rowIndex="4" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="4" GridPane.columnIndex="1"/>
-    <ConnectorControl GridPane.rowIndex="5" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="5" GridPane.columnIndex="1"/>
-    <ConnectorControl GridPane.rowIndex="6" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="6" GridPane.columnIndex="1"/>
-    <ConnectorControl GridPane.rowIndex="7" GridPane.columnIndex="0"/>
-    <SwitchControl GridPane.rowIndex="7" GridPane.columnIndex="1"/>
-</GridPane>-->
