--- a/main.fxml
+++ b/main.fxml
@@ -2,8 +2,6 @@
 
 <?import javafx.scene.layout.BorderPane?>
 
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.StackPane?>
 <BorderPane xmlns:fx="http://javafx.com/javafx"
             fx:id="mainPane" fx:controller="vbb.MainController"
             id="main" stylesheets="/vbb/css/main.css">
@@ -11,9 +9,11 @@
         <fx:include fx:id="tools" source="fxml/tools.fxml"/>
     </left>
     <center>
-        <StackPane fx:id="digitalTrainerPane" alignment="CENTER">
-            <fx:include source="fxml/digital_trainer_board.fxml"/>
-        </StackPane>
+        <BorderPane fx:id="digitalTrainerPane">
+            <center>
+                <fx:include source="fxml/digital_trainer_board.fxml"/>
+            </center>
+        </BorderPane>
     </center>
     <right>
         <fx:include source="fxml/truth_table_generator.fxml" />
